--- a/source/CustomControls/SearchBox.xaml
+++ b/source/CustomControls/SearchBox.xaml
@@ -5,11 +5,12 @@
     <Style TargetType="{x:Type SearchBox}">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
+        <Setter Property="Background" Value="{DynamicResource SearchBoxBackgroundBrush}" />
         <Setter Property="MinHeight" Value="24" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type SearchBox}">
-                    <Border Background="{DynamicResource SearchBoxBackgroundBrush}"
+                    <Border Name="Border" Background="{TemplateBinding Background}"
                             CornerRadius="{DynamicResource ControlCornerRadius}">
                         <Grid>
                             <ContentControl x:Name="PART_SeachIcon"
@@ -24,6 +25,14 @@
                                         Foreground="{DynamicResource TextBrushDarker}" />
                         </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource SearchBoxIsMouseOverBackgroundBrush}" />
+                        </Trigger>
+                        <DataTrigger Binding="{Binding ElementName=PART_TextInpuText, Path=IsFocused}" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource SearchBoxIsMouseOverBackgroundBrush}" />
+                        </DataTrigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
