--- a/source/Views/ExplorerPanel.xaml
+++ b/source/Views/ExplorerPanel.xaml
@@ -9,6 +9,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ExplorerPanel}">
                     <Border BorderBrush="{DynamicResource PanelSeparatorBrush}"
+                            Background="{DynamicResource LibraryDetailsViewBackgroundBrush}"
                             d:DesignWidth="200"
                             d:DesignHeight="400">
                         <Border.Style>
