--- a/source/Views/FilterPanelView.xaml
+++ b/source/Views/FilterPanelView.xaml
@@ -52,6 +52,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type FilterPanel}">
                     <Border BorderBrush="{DynamicResource PanelSeparatorBrush}"
+                            Background="{DynamicResource LibraryDetailsViewBackgroundBrush}"
                             d:DesignWidth="200">
                         <Border.Style>
                             <Style TargetType="Border">
