--- a/source/Views/Sidebar.xaml
+++ b/source/Views/Sidebar.xaml
@@ -5,10 +5,12 @@
                     mc:Ignorable="d">
     
     <Style TargetType="{x:Type Sidebar}">
+        <Setter Property="Background" Value="{DynamicResource TopPanelBackgroundBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Sidebar}">
-                    <Border BorderThickness="0,0,1,0" BorderBrush="{DynamicResource PanelSeparatorBrush}"
+                    <Border BorderThickness="0,0,0,0" BorderBrush="{DynamicResource PanelSeparatorBrush}"
+                            Background="{TemplateBinding Background}"
                             x:Name="BorderContentHolder" Margin="{TemplateBinding Padding}">
                         <DockPanel x:Name="DockContentHolder">                            
                             <Border x:Name="PART_ElemMainMenu" Background="Transparent"
@@ -30,11 +32,11 @@
                         <DataTrigger Binding="{Settings SidebarPosition}" Value="Right">
                             <Setter Property="Padding" Value="0,25,0,0" />
                             <Setter Property="Margin" Value="0,0,0,5" TargetName="PART_ElemMainMenu" />
-                            <Setter Property="BorderThickness" Value="1,0,0,0" TargetName="BorderContentHolder" />
+                            <Setter Property="BorderThickness" Value="0,0,0,0" TargetName="BorderContentHolder" />
                         </DataTrigger>
                         <DataTrigger Binding="{Settings SidebarPosition}" Value="Top">
                             <Setter Property="Margin" Value="0,0,5,0" TargetName="PART_ElemMainMenu" />
-                            <Setter Property="BorderThickness" Value="0,0,0,1" TargetName="BorderContentHolder" />
+                            <Setter Property="BorderThickness" Value="0,0,0,0" TargetName="BorderContentHolder" />
                             <Setter Property="DockPanel.Dock" Value="Left" TargetName="PART_ElemMainMenu" />
                             <Setter Property="DockPanel.Dock" Value="Left" TargetName="ScrollSidebarItems" />
                             <Setter Property="Margin" Value="0,0,100,0" TargetName="ScrollSidebarItems" />
@@ -42,7 +44,7 @@
                         </DataTrigger>
                         <DataTrigger Binding="{Settings SidebarPosition}" Value="Bottom">
                             <Setter Property="Margin" Value="0,0,5,0" TargetName="PART_ElemMainMenu" />
-                            <Setter Property="BorderThickness" Value="0,1,0,0" TargetName="BorderContentHolder" />
+                            <Setter Property="BorderThickness" Value="0,0,0,0" TargetName="BorderContentHolder" />
                             <Setter Property="DockPanel.Dock" Value="Left" TargetName="PART_ElemMainMenu" />
                             <Setter Property="DockPanel.Dock" Value="Left" TargetName="ScrollSidebarItems" />
                             <Setter Property="Orientation" Value="Horizontal" TargetName="PART_PanelSideBarItems" />
