--- a/source/DefaultControls/ComboBox.xaml
+++ b/source/DefaultControls/ComboBox.xaml
@@ -56,6 +56,9 @@
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource ComboboxIsMouseOverBackgroundBrush}" />
+                        </Trigger>
                         <Trigger Property="IsFocused" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" TargetName="Border" />
                         </Trigger>
