--- a/source/DefaultControls/TextBox.xaml
+++ b/source/DefaultControls/TextBox.xaml
@@ -37,6 +37,10 @@
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
+                <Setter Property="Background" Value="{DynamicResource TextBoxIsMouseOverBackgroundBrush}" />
+            </Trigger>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="Background" Value="{DynamicResource TextBoxIsSelectedBackgroundBrush}" />
             </Trigger>
         </Style.Triggers>
     </Style>
