--- a/source/CustomControls/GameMenu.xaml
+++ b/source/CustomControls/GameMenu.xaml
@@ -3,7 +3,7 @@
 
     <Style TargetType="{x:Type GameMenu}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource GameMenuBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PopupBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource PopupBorderBrush}" />
         <Setter Property="BorderThickness" Value="{DynamicResource PopupBorderThickness}" />
         <Setter Property="Template">
@@ -12,7 +12,7 @@
                     <Border BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             Background="{TemplateBinding Background}"
-                            Grid.IsSharedSizeScope="True">
+                            Grid.IsSharedSizeScope="True" Padding="0,5,0,5" >
                         <ItemsPresenter />
                     </Border>
                 </ControlTemplate>
