--- a/source/DefaultControls/TabControl.xaml
+++ b/source/DefaultControls/TabControl.xaml
@@ -21,7 +21,7 @@
                             <RowDefinition Height="*" x:Name="RowDefinition1" />
                         </Grid.RowDefinitions>
                         <Border x:Name="HeaderBorder" Background="{DynamicResource TabControlBackgroundBrush}"
-                                BorderThickness="0,0,0,1" BorderBrush="{DynamicResource NormalBorderBrush}">
+                                BorderThickness="0,0,0,1" BorderBrush="{DynamicResource TabControlSeparatorBrush}">
                             <TabPanel x:Name="HeaderPanel" IsItemsHost="True" Panel.ZIndex="1" Width="Auto" Height="Auto"
                                       KeyboardNavigation.TabIndex="1" RenderTransformOrigin="0.5,0.5">
                                 <TabPanel.LayoutTransform>
