--- a/source/DefaultControls/ProgressBar.xaml
+++ b/source/DefaultControls/ProgressBar.xaml
@@ -8,7 +8,7 @@
 
     <Style TargetType="{x:Type ProgressBar}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Foreground" Value="{DynamicResource HoverBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource ProgressBarBrush}"/>
         <Setter Property="Background" Value="{DynamicResource ProgressBarBackgroundBrush}"/>
         <Setter Property="BorderThickness" Value="{DynamicResource ControlBorderThickness}"/>
         <Setter Property="Template">
