--- a/source/DefaultControls/GroupBox.xaml
+++ b/source/DefaultControls/GroupBox.xaml
@@ -19,7 +19,7 @@
                             BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}"
                             CornerRadius="{DynamicResource ControlCornerRadius}">
                         <DockPanel>
-                            <Border DockPanel.Dock="Top" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource NormalBrush}" >
+                            <Border DockPanel.Dock="Top" BorderThickness="0,0,0,1" BorderBrush="Transparent" >
                                 <TextBlock Style="{DynamicResource BaseTextBlockStyle}" Margin="{TemplateBinding Padding}">
                                     <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" ContentSource="Header"
                                                       RecognizesAccessKey="True" />
